Responsive design for larger screen v1.

--- a/style.css
+++ b/style.css
@@ -62,6 +62,25 @@ a {
 body {
   font-family: "Poppins", sans-serif;
 }
+
+main,
+header {
+  margin: 0 1rem;
+}
+@media (min-width: 58.125rem) {
+  main,
+header {
+    margin: auto;
+    max-width: 95rem;
+  }
+}
+
+@media (min-width: 58.125rem) {
+  .block {
+    margin: 0 4rem;
+  }
+}
+
 .logo-header path {
   fill: hsl(257deg, 27%, 26%);
 }
@@ -70,7 +89,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 2rem 1rem;
+  margin: 2rem 0;
+}
+@media (min-width: 58.125rem) {
+  .wrapper-header {
+    justify-content: inherit;
+    gap: 3rem;
+  }
 }
 
 .hamburger {
@@ -83,7 +108,7 @@ body {
   transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
-@media (min-width: 47rem) {
+@media (min-width: 58.125rem) {
   .hamburger {
     display: none;
   }
@@ -128,21 +153,50 @@ body {
   transform: translateX(-50%);
   visibility: hidden;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
 .wrap-menu.active {
   opacity: 1;
   visibility: visible;
+}
+@media (min-width: 58.125rem) {
+  .wrap-menu {
+    visibility: visible;
+    opacity: 1;
+    position: initial;
+    background-color: transparent;
+    transform: translateX(0);
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .wrap-menu a {
   color: white;
   font-weight: 700;
 }
+@media (min-width: 58.125rem) {
+  .wrap-menu a {
+    color: hsl(257deg, 7%, 63%);
+    font-weight: 700;
+    font-size: 1rem;
+  }
+  .wrap-menu a:hover {
+    color: hsl(257deg, 27%, 26%);
+  }
+}
 
 .wrap-menu li {
   width: 100%;
   text-align: center;
+}
+@media (min-width: 58.125rem) {
+  .wrap-menu li {
+    width: inherit;
+  }
 }
 
 .wrap-menu ul {
@@ -151,6 +205,11 @@ body {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+@media (min-width: 58.125rem) {
+  .wrap-menu ul {
+    flex-direction: row;
+  }
 }
 
 .btn {
@@ -169,6 +228,14 @@ body {
   width: 100%;
   border-radius: 2rem;
 }
+@media (min-width: 58.125rem) {
+  .sign-up-button {
+    color: white !important;
+    padding: 0.5rem;
+    width: inherit;
+    padding: 0.5rem 1rem;
+  }
+}
 
 .menu-link::after {
   content: "";
@@ -178,15 +245,42 @@ body {
   margin-block: 1rem;
   background: hsl(257deg, 7%, 63%);
 }
+@media (min-width: 58.125rem) {
+  .menu-link::after {
+    display: none;
+  }
+}
 
+.human-working-wrap {
+  background-image: url(images/illustration-working.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top left;
+  width: 100%;
+  min-height: 20rem;
+}
+@media (min-width: 58.125rem) {
+  .human-working-wrap {
+    max-width: 30rem;
+    background-size: contain;
+  }
+}
+
+/*
 .working-human {
   margin: 1rem 1rem 2rem 1rem;
   width: 140%;
   height: auto;
   padding-left: 40%;
   max-width: 140%;
+  @include larger-screen {
+    padding-left: 0;
+    margin: 0;
+    width: 50%;
+    max-width: 50rem;
+  }
 }
-
+*/
 .more-than-just {
   position: relative;
   display: flex;
@@ -194,9 +288,29 @@ body {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  gap: 1rem;
-  margin: 2rem 1rem;
+  gap: 2rem;
+  margin: 2rem 0;
   overflow: hidden;
+}
+@media (min-width: 58.125rem) {
+  .more-than-just {
+    flex-direction: row-reverse;
+    text-align: left;
+    padding-block: 3rem;
+  }
+}
+
+.wrapper-more-than {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+@media (min-width: 58.125rem) {
+  .wrapper-more-than {
+    align-items: flex-start;
+    flex-grow: 2;
+  }
 }
 
 .more-than-just h1 {
@@ -205,6 +319,12 @@ body {
   font-size: 2rem;
   line-height: 2.25rem;
   letter-spacing: -1px;
+}
+@media (min-width: 58.125rem) {
+  .more-than-just h1 {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
 }
 
 .more-than-just p {
@@ -224,12 +344,22 @@ body {
   background-position-y: top;
   border-radius: 0.5rem;
   background-color: hsl(257deg, 27%, 26%);
-  margin: 1rem;
+  margin: 1rem 0;
+  gap: 1.25rem;
+}
+@media (min-width: 58.125rem) {
+  .link-shorten-form {
+    flex-direction: row;
+    padding: 2rem;
+    background-image: url(images/bg-shorten-desktop.svg);
+    background-position-x: center;
+    background-position-y: center;
+  }
 }
 
 .link-input {
   width: 100%;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   border: 0;
   outline: 0;
   font-family: inherit;
@@ -237,27 +367,38 @@ body {
   padding-left: 1rem;
   box-sizing: border-box;
   font-size: 1.125rem;
-  margin-bottom: 1rem;
+}
+.link-input::-moz-placeholder {
+  color: hsl(0deg, 0%, 75%);
+}
+.link-input:-ms-input-placeholder {
+  color: hsl(0deg, 0%, 75%);
+}
+.link-input::placeholder {
+  color: hsl(0deg, 0%, 75%);
 }
 .link-input.active {
   border: 2px solid hsl(0deg, 87%, 67%);
   margin-bottom: 0;
 }
-
-.link-input::-moz-placeholder {
-  color: hsl(0deg, 0%, 75%);
+.link-input.active::-moz-placeholder {
+  color: hsl(0deg, 87%, 67%);
 }
-
-.link-input:-ms-input-placeholder {
-  color: hsl(0deg, 0%, 75%);
+.link-input.active:-ms-input-placeholder {
+  color: hsl(0deg, 87%, 67%);
 }
-
-.link-input::placeholder {
-  color: hsl(0deg, 0%, 75%);
+.link-input.active::placeholder {
+  color: hsl(0deg, 87%, 67%);
+}
+@media (min-width: 58.125rem) {
+  .link-input {
+    padding-block: 1rem;
+  }
 }
 
 .wrap-form {
   width: 100%;
+  position: relative;
 }
 
 .error-msg {
@@ -265,6 +406,9 @@ body {
   font-style: italic;
   color: hsl(0deg, 87%, 67%);
   visibility: hidden;
+  position: absolute;
+  left: 0;
+  bottom: -1.1rem;
 }
 .error-msg.active {
   visibility: visible;
@@ -283,7 +427,13 @@ body {
   font-weight: 700;
   color: white;
   font-size: 1.125rem;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
+}
+@media (min-width: 58.125rem) {
+  .link-button {
+    max-width: 10rem;
+    padding-block: 1rem;
+  }
 }
 
 .statistics {
@@ -301,16 +451,57 @@ body {
   color: hsl(257deg, 27%, 26%);
   letter-spacing: -1px;
 }
+@media (min-width: 58.125rem) {
+  .statistics h2 {
+    font-size: 3rem;
+  }
+}
 
 .statistics p {
   color: hsl(257deg, 7%, 63%);
 }
+@media (min-width: 58.125rem) {
+  .statistics p {
+    max-width: 45ch;
+  }
+}
 
 .argument-section {
-  margin: 3rem 1rem 3rem 1rem;
+  margin: 3rem 0;
   display: flex;
   flex-direction: column;
   gap: 6rem;
+}
+@media (min-width: 58.125rem) {
+  .argument-section {
+    flex-direction: row;
+    gap: 3rem;
+    margin: auto;
+    height: 100%;
+    padding-block: 4rem;
+    min-height: 20rem;
+    justify-content: space-between;
+    gap: 4%;
+    max-width: 95rem;
+  }
+}
+
+@media (min-width: 58.125rem) {
+  .box-argu:nth-child(1) {
+    align-self: start;
+  }
+}
+
+@media (min-width: 58.125rem) {
+  .box-argu:nth-child(2) {
+    align-self: center;
+  }
+}
+
+@media (min-width: 58.125rem) {
+  .box-argu:nth-child(3) {
+    align-self: end;
+  }
 }
 
 .argument-section .box-argu {
@@ -319,6 +510,12 @@ body {
   padding: 2rem;
   position: relative;
   border-radius: 0.5rem;
+}
+@media (min-width: 58.125rem) {
+  .argument-section .box-argu {
+    max-width: 20rem;
+    max-height: 18rem;
+  }
 }
 
 .box-argu:nth-child(2)::before {
@@ -332,6 +529,14 @@ body {
   transform: translate(-50%, -100%);
   z-index: -1;
 }
+@media (min-width: 58.125rem) {
+  .box-argu:nth-child(2)::before {
+    width: 100%;
+    height: 0.5rem;
+    top: 40%;
+    left: 0;
+  }
+}
 .box-argu:nth-child(2)::after {
   content: "";
   height: 100%;
@@ -343,10 +548,23 @@ body {
   transform: translate(-50%, 100%);
   z-index: -1;
 }
+@media (min-width: 58.125rem) {
+  .box-argu:nth-child(2)::after {
+    width: 100%;
+    height: 0.5rem;
+    bottom: 60%;
+    left: 100%;
+  }
+}
 
 .box-argu p {
   text-align: center;
   color: hsl(257deg, 7%, 63%);
+}
+@media (min-width: 58.125rem) {
+  .box-argu p {
+    text-align: left;
+  }
 }
 
 .box-argu h3 {
@@ -354,6 +572,11 @@ body {
   margin: 2rem 0 1rem 0;
   color: hsl(257deg, 27%, 26%);
   letter-spacing: -1px;
+}
+@media (min-width: 58.125rem) {
+  .box-argu h3 {
+    text-align: left;
+  }
 }
 
 .icon-argument {
@@ -373,6 +596,11 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+@media (min-width: 58.125rem) {
+  .arg-icon {
+    left: 25%;
+  }
+}
 
 .boost-section {
   background-image: url(images/bg-boost-mobile.svg);
@@ -386,6 +614,11 @@ body {
   justify-content: center;
   align-items: center;
   background-color: hsl(257deg, 27%, 26%);
+}
+@media (min-width: 58.125rem) {
+  .boost-section {
+    background-image: url(images/bg-boost-desktop.svg);
+  }
 }
 
 .boost-section h2 {
@@ -402,6 +635,7 @@ body {
   border-radius: 2rem;
   padding: 0.75rem 2rem 0.75rem 2rem;
   font-size: 1.125rem;
+  max-width: 7rem;
 }
 .get-started-button:hover {
   background: #7ce4e4;
@@ -414,7 +648,7 @@ footer {
 footer h5 {
   color: white;
   font-size: 1.125rem;
-  margin: 1rem;
+  margin: 1rem 0 1rem 0;
   font-weight: 700;
 }
 
@@ -424,6 +658,12 @@ footer h5 {
   gap: 1.5rem;
   padding-block: 2rem;
 }
+@media (min-width: 58.125rem) {
+  .social-link {
+    padding-block: 1rem;
+    gap: 1rem;
+  }
+}
 
 .nav-footer {
   display: flex;
@@ -431,6 +671,14 @@ footer h5 {
   justify-content: center;
   align-items: center;
   padding-block: 2rem;
+}
+@media (min-width: 58.125rem) {
+  .nav-footer {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 8%;
+    margin: auto;
+  }
 }
 
 footer a {
@@ -452,9 +700,20 @@ footer a:hover {
 
 footer li {
   text-align: center;
-  margin: 0.5rem;
+  margin: 0.5rem 0 0.5rem 0;
+}
+@media (min-width: 58.125rem) {
+  footer li {
+    text-align: left;
+  }
 }
 
 .logo-footer {
-  padding: 1rem;
+  padding-block: 1rem;
+}
+
+@media (min-width: 58.125rem) {
+  .wrapper-logo {
+    max-width: 23rem;
+  }
 }/*# sourceMappingURL=style.css.map */
