--- a/style.css
+++ b/style.css
@@ -354,6 +354,7 @@ header {
     background-image: url(images/bg-shorten-desktop.svg);
     background-position-x: center;
     background-position-y: center;
+    background-size: cover;
   }
 }
 
@@ -433,6 +434,95 @@ header {
   .link-button {
     max-width: 10rem;
     padding-block: 1rem;
+  }
+}
+
+.resul-link {
+  margin-block: 1rem;
+}
+
+.shortened-link {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  width: 100%;
+  padding-block: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
+  border-radius: 0.5rem;
+  margin-block: 1rem;
+}
+@media (min-width: 58.125rem) {
+  .shortened-link {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-block: 0.5rem;
+  }
+}
+
+.yourlink {
+  color: hsl(255deg, 11%, 22%);
+  position: relative;
+  margin: 0 1rem;
+  padding-bottom: 1rem;
+  width: 90%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+@media (min-width: 58.125rem) {
+  .yourlink {
+    padding-bottom: 0;
+  }
+}
+
+.bar-link {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-top: 2px solid #f0f1f6;
+}
+@media (min-width: 58.125rem) {
+  .bar-link {
+    border-top: none;
+    flex-direction: row;
+  }
+}
+
+.ourlink {
+  margin: 0 1rem;
+  padding-block: 1rem;
+  color: hsl(180deg, 66%, 49%);
+  width: 90%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+@media (min-width: 58.125rem) {
+  .ourlink {
+    text-align: right;
+  }
+}
+
+.copybutton {
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  font: inherit;
+  background: hsl(180deg, 66%, 49%);
+  border: transparent;
+  border-radius: 0.25rem;
+  z-index: 110;
+  color: white;
+  transition: all 0.2s ease-in-out;
+  padding-block: 0.5rem;
+  margin: 0 1rem;
+  cursor: pointer;
+}
+@media (min-width: 58.125rem) {
+  .copybutton {
+    padding: 0 2rem;
+    height: 2.5rem;
+    align-self: center;
   }
 }
 
