--- a/style.scss
+++ b/style.scss
@@ -281,21 +281,6 @@ header {
     background-size: contain;
   }
 }
-/*
-.working-human {
-  margin: 1rem 1rem 2rem 1rem;
-  width: 140%;
-  height: auto;
-  padding-left: 40%;
-  max-width: 140%;
-  @include larger-screen {
-    padding-left: 0;
-    margin: 0;
-    width: 50%;
-    max-width: 50rem;
-  }
-}
-*/
 
 .more-than-just {
   position: relative;
@@ -430,7 +415,10 @@ header {
 }
 .resul-link {
   margin-block: 1rem;
+  display: flex;
+  flex-direction: column-reverse;
 }
+
 .shortened-link {
   display: flex;
   flex-direction: column;
@@ -440,6 +428,8 @@ header {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
   border-radius: 0.5rem;
   margin-block: 1rem;
+  animation: shortened-anim 0.2s forwards ease-in-out;
+  transform-origin: top;
   @include larger-screen() {
     flex-direction: row;
     justify-content: center;
@@ -447,6 +437,28 @@ header {
     padding-block: 0.5rem;
   }
 }
+@keyframes shortened-anim {
+  from {
+    transform: scaley(0);
+  }
+  to {
+    transform: scaley(1);
+  }
+}
+
+.link-wrapper {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+
+  width: 100%;
+  @include larger-screen() {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
 .yourlink {
   color: $Very-Dark-Blue;
   position: relative;
@@ -696,7 +708,7 @@ footer {
   background-color: $Very-Dark-Violet;
 }
 
-footer h5 {
+footer h4 {
   color: white;
   font-size: 1.125rem;
   margin: 1rem 0 1rem 0;
